Improve geocode error handling

--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "scripts/package.sh",
     "deploy": "npm run package && scripts/deploy.sh",
-    "mock-nearest-aircraft": "scripts/mock-event.sh Nearest_Aircraft",
-    "mock-nearby-aircraft": "scripts/mock-event.sh Nearby_Aircraft",
-    "mock-overhead-aircraft": "scripts/mock-event.sh Overhead_Aircraft",
-    "mock-nearest-overhead-aircraft": "scripts/mock-event.sh Nearest_Overhead_Aircraft",
-    "mock-nearest-helicopter": "scripts/mock-event.sh Nearest_Helicopter",
-    "mock-nearest-jet": "scripts/mock-event.sh Nearest_Jet",
-    "mock-overhead-helicopters": "scripts/mock-event.sh Overhead_Helicopters",
-    "mock-nearby-helicopters": "scripts/mock-event.sh Nearby_Helicopters",
-    "mock-overhead-jets": "scripts/mock-event.sh Overhead_Jets",
-    "mock-nearby-jets": "scripts/mock-event.sh Nearby_Jets",
-    "mock-overhead-military": "scripts/mock-event.sh Overhead_Military",
-    "mock-nearby-military": "scripts/mock-event.sh Nearby_Military"
+    "mock-nearest-aircraft": "scripts/mock-event.sh Nearest_Aircraft --valid-location",
+    "mock-nearby-aircraft": "scripts/mock-event.sh Nearby_Aircraft --valid-location",
+    "mock-overhead-aircraft": "scripts/mock-event.sh Overhead_Aircraft --valid-location",
+    "mock-nearest-overhead-aircraft": "scripts/mock-event.sh Nearest_Overhead_Aircraft --valid-location",
+    "mock-nearest-helicopter": "scripts/mock-event.sh Nearest_Helicopter --valid-location",
+    "mock-nearest-jet": "scripts/mock-event.sh Nearest_Jet --valid-location",
+    "mock-overhead-helicopters": "scripts/mock-event.sh Overhead_Helicopters --valid-location",
+    "mock-nearby-helicopters": "scripts/mock-event.sh Nearby_Helicopters --valid-location",
+    "mock-overhead-jets": "scripts/mock-event.sh Overhead_Jets --valid-location",
+    "mock-nearby-jets": "scripts/mock-event.sh Nearby_Jets --valid-location",
+    "mock-overhead-military": "scripts/mock-event.sh Overhead_Military --valid-location",
+    "mock-nearby-military": "scripts/mock-event.sh Nearby_Military --valid-location",
+    "mock-invalid-location": "scripts/mock-event.sh Nearby_Aircraft --invalid-location"
   },
   "repository": {
     "type": "git",
