--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "lambda-local": "^1.6.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "scripts/package.sh",
