--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "scripts/package.sh",
     "deploy": "npm run package && scripts/deploy.sh",
+    "clean": "rm -rf products",
     "mock-nearest-aircraft": "scripts/mock-event.sh Nearest_Aircraft --valid-location",
     "mock-nearby-aircraft": "scripts/mock-event.sh Nearby_Aircraft --valid-location",
     "mock-overhead-aircraft": "scripts/mock-event.sh Overhead_Aircraft --valid-location",
