--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "package": "scripts/package.sh",
     "deploy": "npm run package && scripts/deploy.sh",
     "clean": "rm -rf products",
+    "logs": "open \"https://app.logz.io/kibana-app/kibana#/discover/ae7d7510-605e-11e8-81d6-c72f7881f3d6\"",
     "mock-nearest-aircraft": "scripts/mock-event.sh Nearest_Aircraft --valid-location",
     "mock-nearby-aircraft": "scripts/mock-event.sh Nearby_Aircraft --valid-location",
     "mock-overhead-aircraft": "scripts/mock-event.sh Overhead_Aircraft --valid-location",
