add www deployment script

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "package": "scripts/package.sh",
     "deploy": "npm run package && scripts/deploy.sh",
     "clean": "rm -rf products",
-    "logs": "open \"https://app.logz.io/kibana-app/kibana#/discover/ae7d7510-605e-11e8-81d6-c72f7881f3d6\"",
+    "deploy-website": "scripts/deploy-www.sh",
+    "open-logs": "open \"https://app.logz.io/kibana-app/kibana#/discover/ae7d7510-605e-11e8-81d6-c72f7881f3d6\"",
+    "open-website": "open \"https://radarskill.dzombak.com\"",
     "mock-nearest-aircraft": "scripts/mock-event.sh Nearest_Aircraft --valid-location",
     "mock-nearby-aircraft": "scripts/mock-event.sh Nearby_Aircraft --valid-location",
     "mock-nearest-helicopter": "scripts/mock-event.sh Nearest_Helicopter --valid-location",
