ADSB client fetches data from new API

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ export _RPROMPT_ENV="ACR: node8 + auth"
 export PATH="/usr/local/opt/node@8/bin:$PATH"
 export GEOCODE_API_KEY=""
 export IMAGE_API_KEY=""
+export ADSBX_API_KEY=""
